[FEAT 015]: Success validation and exception handling